# mayhem-bazel-example

./: .bazelrc  .gitmodules  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod
.github/workflows/: docker.yml  linux.yml  windows.yml
fuzz/: BUILD
harness/: BUILD  fuzzed_data_provider.h  fuzzing_utils.cc
harness_utils/: BUILD
main/: BUILD
mayhem/: BUILD
mayhem/config/: Dockerfile  Mayhemfile
test/: BUILD  combined_test_calculator.cc  fuzzing_utils_test_calculator.cc  harness_utils_test_calculator.cc  test_calculator.cc
